# image2sketch

./: CMakeLists.txt  README.md  gradle.properties  package-lock.json  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/scut/example/: ExampleInstrumentedTest.kt
app/src/debug/res/drawable/: ic_close_foreground.xml  ic_swap_foreground.xml
app/src/debug/res/mipmap-anydpi-v26/: ic_swap.xml
app/src/debug/res/values/: ic_swap_background.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ImageToSketch.cpp  ImageToSketch.h  native-lib.cpp
app/src/main/java/com/scut/example/: ImageAddress.kt  ImageApplication.kt  ImageContent.kt  ImageDao.kt  ImageDatabase.kt  ImageEntity.kt  ImageProcessHelper.kt  MainActivity.kt  ShowActivity.kt
app/src/main/res/layout/: activity_main.xml  activity_show.xml  image_item.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/scut/example/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
include/: ImageToSketch.h  config.h  config.h.in
opencv/: build.gradle
src/: CMakeLists.txt  ImageToSketch.cpp
standalone/: CMakeLists.txt  main.cpp
